Test: Add background image to foreground... issue with z-index avoiding for now

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
     --green: #388e3c;
     --red: #d32f2f;
     --white: #ffffff;
-    --dark: #9a8a8a;
+    --dark: #000000;
     --gray: #f5f5f5;
 }
 
@@ -25,13 +25,14 @@ html, body {
     font-size: 14px;
 }
 
+
 .global-overlay {
     position: fixed;
     left: 0;
     width: 100%;
     height: 100%;
     overflow: hidden; 
-    z-index: -1; 
+    z-index: -1000; 
 }
 
 .shadow-overlay {
@@ -49,7 +50,7 @@ html, body {
     box-shadow: inset 0px 0px 10000px 10px rgb(0, 0, 0);
     height: 75vh;
     font-family: 'Alumni Sans', sans-serif;
-
+    z-index: 100;
 }
 
 .overlay {
@@ -73,7 +74,7 @@ html, body {
     justify-content: space-evenly;
     align-items: center;
     color: var(--white);
-    z-index: 999;
+    z-index: 10000;
     box-shadow: 0px 0px 90px 10px rgba(0, 0, 0, 0.696);
 }
 
@@ -225,6 +226,7 @@ html, body {
     color: var(--dark);
     margin-top: 1.5rem;
     margin-bottom: 1rem;
+    
 }
 
 #add-word-form, #edit-word-form {
@@ -236,6 +238,7 @@ html, body {
     max-width: 800px;
     margin: 2rem auto 3rem;
     position: relative;
+    z-index: 1000;
 }
 
 #add-word-form h3 {
@@ -383,15 +386,19 @@ cursor: pointer;
 
 /* Modal actions button row */
 .modal-actions {
-display: flex;
-flex-direction: column;
-gap: 1rem;
-margin-top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1.5rem;
 }
 
 .modal .cancel {
-background-color: var(--red);
-color: white;
+    background-color: var(--red);
+    color: white;
+}
+
+.word-cards {
+    z-index: 1000;
 }
 
 .word-card {
@@ -440,6 +447,7 @@ color: white;
 .word-card .translations {
     margin-top: 0.5rem;
     padding-left: 1rem;
+    
 }
 
 .word-card .translations span {
